--- a/now.json
+++ b/now.json
@@ -7,6 +7,7 @@
   "env": {
     "NODE_ENV": "production",
     "DB_SERVER": "@micro-user-photo-db-server",
-    "DB_COLLECTION": "@micro-user-photo-db-collection"
+    "DB_COLLECTION": "@micro-user-photo-db-collection",
+    "JWT_SECRET": "@micro-user-photo-jwt-secret"
   }
 }
