--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "name": "micro-user-photo",
   "alias": [
-    "photos.minelev.no"
+    "photo.service.t-fk.no"
   ],
   "type": "npm",
   "env": {
