--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "cors": "2.8.4",
+    "express-jwt": "5.3.0",
+    "finalhandler": "1.1.0",
     "markdown-it": "8.4.0",
     "micro": "9.0.2",
-    "micro-cors": "0.0.4",
-    "micro-jwt-auth": "1.9.0",
-    "microrouter": "3.0.0",
     "mongo-sanitize": "1.0.0",
-    "mongojs": "2.4.1"
+    "mongojs": "2.4.1",
+    "router": "1.3.2",
+    "winston": "2.4.0",
+    "winston-papertrail": "1.0.5"
   }
 }
