--- a/now.json
+++ b/now.json
@@ -11,7 +11,7 @@
     "NODE_ENV": "production",
     "DB_SERVER": "@micro-user-photo-db-server",
     "DB_COLLECTION": "@micro-user-photo-db-collection",
-    "JWT_SECRET": "@micro-user-photo-jwt-secret",
+    "SYSTEM_JWT_SECRET": "@tfk-system-jwt",
     "PAPERTRAIL_HOSTNAME": "userphotos",
     "PAPERTRAIL_HOST": "@tfk-papertrail-host",
     "PAPERTRAIL_PORT": "@tfk-papertrail-port"
