--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=8.9.3"
+    "node": ">=10.1.0"
   },
   "scripts": {
     "test": "standard && nsp check && ava",
@@ -28,7 +28,8 @@
     "standard-fix": "standard --fix",
     "start": "micro",
     "dev": "micro-dev -H localhost",
-    "deploy": "now && now alias"
+    "deploy": "now && now alias",
+    "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "microservice",
