--- a/now.json
+++ b/now.json
@@ -1,11 +1,12 @@
 {
+  "version": 1,
   "name": "micro-user-photo",
   "alias": [
     "photos.minelev.no"
   ],
   "type": "npm",
   "engines": {
-    "node": "8.9.3"
+    "node": ">10.0.0"
   },
   "env": {
     "NODE_ENV": "production",
