--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
     "coveralls": "nyc ava && nyc report --reporter=lcov && cat coverage/lcov.info | coveralls",
     "standard-fix": "standard --fix",
     "start": "micro",
-    "dev": "micro-dev -H localhost",
-    "deploy": "now && now alias",
+    "deploy": "npm test && now --target production",
     "refresh": "rm -rf node_modules && rm package-lock.json && npm install"
   },
   "keywords": [
     "microservice",
-    "micro",
     "photo",
     "profile",
     "Telemark fylkeskommune"
@@ -49,18 +47,13 @@
   "devDependencies": {
     "ava": "2.2.0",
     "coveralls": "3.0.5",
-    "micro-dev": "3.0.0",
     "nyc": "14.1.1",
-    "standard": "13.1.0",
-    "test-listen": "1.1.0"
+    "standard": "13.1.0"
   },
   "dependencies": {
     "axios": "0.19.0",
-    "cors": "2.8.5",
     "express-jwt": "5.3.1",
     "finalhandler": "1.1.2",
-    "markdown-it": "9.0.1",
-    "micro": "9.3.4",
     "mongo-sanitize": "1.0.1",
     "mongojs": "2.6.0",
     "router": "1.3.3",
